# anki-vocab-automation

./: .flake8  .gitignore  AGENTS.md  LICENSE  README.md  README_CN.md  app.py  config.env.example  pyproject.toml  requirements.txt  setup.py  temp_config.txt
.agents/skills/anki-card-agent-authored/: SKILL.md
.agents/skills/anki-card-agent-authored/agents/: openai.yaml
.agents/skills/anki-card-agent-authored/references/: agent-authored-cards.md  ankiconnect-capabilities.md  localized-back-language.md
.agents/skills/anki-card-agent-authored/scripts/: ankiconnect_request.py  create_agent_vocab_note.py  localize_back_template.py
.agents/skills/anki-card-repo-llm/: SKILL.md
.agents/skills/anki-card-repo-llm/agents/: openai.yaml
.agents/skills/anki-card-repo-llm/references/: ankiconnect-capabilities.md  localized-back-language.md  project-agent-workflow.md  project-anki-model.md
.agents/skills/anki-card-repo-llm/scripts/: ankiconnect_request.py
.agents/skills/anki-card-study-coach/: SKILL.md
.agents/skills/anki-card-study-coach/agents/: openai.yaml
.agents/skills/anki-card-study-coach/references/: ankiconnect-study-queries.md  efl-coaching-guidelines.md  study-session-rules.md
.agents/skills/anki-card-study-coach/scripts/: ankiconnect_request.py  select_study_cards.py  study_turn_assist.py
.claude/skills/anki-card-agent-authored/: SKILL.md
.claude/skills/anki-card-repo-llm/: SKILL.md
.claude/skills/anki-card-study-coach/: SKILL.md
.gemini/commands/anki-card/: agent-authored.toml  repo-llm.toml  study-coach.toml
.github/workflows/: ci.yml
data/: New_Words.txt
docs/: llm-benchmark-phase-summary-2026-03.md
examples/: cross_platform_demo.py  openai_compatible_demo.py  quick_start.py  sample_words.txt
scripts/: check_repo.py  prepare_for_github.py  run_lmstudio_model_benchmark.py  setup.py
src/anki_vocab_automation/: __init__.py  anki_connect.py  audio_manager.py  collins_api.py  concurrent_processor.py  config.py  html_parser.py  input_validator.py  llm_client.py  main.py  model_benchmark.py  models.py  openai_compatible_client.py  secure_logger.py  tts_generator.py
src/anki_vocab_automation/templates/: vocabulary_back.html
templates/: Vocabulary_Template.html  vocabulary.css  vocabulary_front.html
tests/: test_anki_skill_scripts.py  test_automation.py  test_card_template.py  test_input_validator.py  test_llm_client.py  test_llm_generated_example.py  test_local_anki_import.py  test_main_audio.py  test_main_cli.py  test_model_benchmark.py  test_study_skill_selection.py  test_study_turn_assist.py  test_tts_generator.py
tests/fixtures/: lmstudio_llm_benchmark_cases.json
